--- a/bower.json
+++ b/bower.json
@@ -1,5 +1,11 @@
 {
   "name": "t-activity-translator",
+  "version": "0.0.0",
+  "authors": [
+    "Sounak Pal <spal@tavisca.com>",
+    "Manoj Chalode <chalodem@gmail.com>",
+    "Ganesh Ratnaparkhi <ganeshr43@gmail.com>"
+  ],
   "main": "t-activity-price-translator.html",
   "dependencies": {
     "polymer": "Polymer/polymer#^1.4.0",
